Fix broken styles: initial empty editor + search/replace dialog

--- a/ide/web/spark_polymer.css
+++ b/ide/web/spark_polymer.css
@@ -116,25 +116,28 @@ img.ace-tooltip {
   border-bottom: 1px solid white;
 }
 
-div.ace_search {
-  background: #fafafa;
-  padding-right: 4px;
-  width: 305px;
-  /* Can't use 'inherit' here: Ace overrides that. */
-  font-family: Roboto, 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  font-weight: 500;
-  font-size: 12px;
-}
-
 div.ace_search.right {
   background-color: #eee;
-  border-radius: 0px;
+  border-radius: 0;
   border-bottom-left-radius: 2px;
   border-right: none;
   border-left: 1px solid #dadada;
-  width: 305px;
+  width: 298px;
   max-width: none;
+  padding-right: 4px;
   z-index: 101;
+}
+
+div.ace_search.right * {
+  border-radius: 0;
+}
+
+div.ace_search_form *,
+div.ace_replace_form * {
+  /* Can't use 'inherit' here: Ace overrides that. */
+  font-family: Roboto, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-weight: 400;
+  font-size: 12px;
 }
 
 div.ace_search_form,
@@ -142,17 +145,21 @@ div.ace_replace_form {
   width: 275px;
 }
 
-.ace_search_form .ace_search_field {
-  width: 219px;
+.ace_search_form > .ace_search_field {
+  width: 221px;
 }
 
-.ace_replace_form .ace_search_field {
-  width: 194px;
+.ace_replace_form > .ace_search_field {
+  width: 198px;
+}
+
+button.ace_searchbtn,
+button.ace_replacebtn {
+  font-weight: 500;
 }
 
 button.ace_replacebtn {
-  color: #484848;
-  font-weight: 500;
+  color: #7d7d7d;
   padding-left: 5px;
   padding-right: 5px;
 }
@@ -200,9 +207,19 @@ button.ace_searchbtn.prev {
   background: #fff url(images/find-prev.svg);
 }
 
+button.ace_searchbtn.next,
+button.ace_searchbtn.prev {
+  background-position-x: 1px;
+  fill: 0;
+}
+
 button.ace_searchbtn.next:hover,
 button.ace_searchbtn.prev:hover {
   background-color: #eee;
+}
+
+button.ace_searchbtn[action="findAll"] {
+  display: none;
 }
 
 /*
@@ -660,8 +677,9 @@ button.ace_searchbtn.prev:hover {
 
 /*
   Tweak the default behavior of tab bar to avoid an overlap with the
-  navigation buttons.
+  navigation buttons and put it on top of the Ace container.
 */
 .tabview-tabbar {
   margin-right: 131px;
+  z-index: 1;
 }
